########################################################################
# Install Message
# This is written in this CMakeLists.txt and add subdir is called last
# thus, the message will appear at the very end of the install process
#
# Do not put any other code here, this is for human readable info only
########################################################################
set(Tasmanian_post_install "--------------------------------------------------------------------------------\n")
set(Tasmanian_post_install "${Tasmanian_post_install}Tasmanian Install Complete: installed version ${Tasmanian_VERSION_MAJOR}.${Tasmanian_VERSION_MINOR}\n\n")
set(Tasmanian_post_install "${Tasmanian_post_install}executables:      tasgrid\n")
if (NOT "${Tasmanian_libs_type}" STREQUAL "STATIC_ONLY")
    set(Tasmanian_post_install "${Tasmanian_post_install}shared libraries: ${CMAKE_SHARED_LIBRARY_PREFIX}tasmaniansparsegrid${CMAKE_SHARED_LIBRARY_SUFFIX}\n")
    set(Tasmanian_post_install "${Tasmanian_post_install}                  ${CMAKE_SHARED_LIBRARY_PREFIX}tasmaniandream${CMAKE_SHARED_LIBRARY_SUFFIX}\n")
    if (Tasmanian_ENABLE_FORTRAN)
        set(Tasmanian_post_install "${Tasmanian_post_install}                  ${CMAKE_SHARED_LIBRARY_PREFIX}tasmanianfortran90${CMAKE_SHARED_LIBRARY_SUFFIX}\n")
    endif()
endif()
if (${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
    if (NOT "${Tasmanian_libs_type}" STREQUAL "SHARED_ONLY")
        set(Tasmanian_post_install "${Tasmanian_post_install}static libraries: ${CMAKE_STATIC_LIBRARY_PREFIX}tasmaniansparsegrid_static${CMAKE_STATIC_LIBRARY_SUFFIX}\n")
        set(Tasmanian_post_install "${Tasmanian_post_install}                  ${CMAKE_STATIC_LIBRARY_PREFIX}tasmaniandream_static${CMAKE_STATIC_LIBRARY_SUFFIX}\n")
        if (Tasmanian_ENABLE_FORTRAN)
            set(Tasmanian_post_install "${Tasmanian_post_install}                  ${CMAKE_STATIC_LIBRARY_PREFIX}tasmanianfortran90_static${CMAKE_STATIC_LIBRARY_SUFFIX}\n")
        endif()
    endif()
else()
    if (NOT "${Tasmanian_libs_type}" STREQUAL "SHARED_ONLY")
        set(Tasmanian_post_install "${Tasmanian_post_install}static libraries: ${CMAKE_STATIC_LIBRARY_PREFIX}tasmaniansparsegrid${CMAKE_STATIC_LIBRARY_SUFFIX}\n")
        set(Tasmanian_post_install "${Tasmanian_post_install}                  ${CMAKE_STATIC_LIBRARY_PREFIX}tasmaniandream${CMAKE_STATIC_LIBRARY_SUFFIX}\n")
        if (Tasmanian_ENABLE_FORTRAN)
            set(Tasmanian_post_install "${Tasmanian_post_install}                  ${CMAKE_STATIC_LIBRARY_PREFIX}tasmanianfortran90${CMAKE_STATIC_LIBRARY_SUFFIX}\n")
        endif()
    endif()
endif()
set(Tasmanian_post_install "${Tasmanian_post_install}C++ examples:     ${CMAKE_INSTALL_PREFIX}/share/Tasmanian/examples/*.cpp\n")
if (Tasmanian_ENABLE_FORTRAN)
    set(Tasmanian_post_install "${Tasmanian_post_install}Fortran examples: ${CMAKE_INSTALL_PREFIX}/share/Tasmanian/examples/example_sparse_grids.f90\n")
endif()
set(Tasmanian_post_install "${Tasmanian_post_install}                  see CMakeLists.txt in ${CMAKE_INSTALL_PREFIX}/shared/Tasmanian/examples\n\n")

set(Tasmanian_post_install "${Tasmanian_post_install}bash env source:          ${CMAKE_INSTALL_PREFIX}/config/TasmanianENVsetup.sh\n\n")

set(Tasmanian_post_install "${Tasmanian_post_install}cmake package config:     find_package(Tasmanian ${Tasmanian_VERSION_MAJOR}.${Tasmanian_VERSION_MINOR}.${Tasmanian_VERSION_PATCH} PATHS \\\"${CMAKE_INSTALL_PREFIX}/lib/\\\")\n")
set(Tasmanian_post_install "${Tasmanian_post_install}cmake executable targets: Tasmanian::tasgrid\n")
if (TARGET Tasmanian_libsparsegrid_static)
    set(Tasmanian_post_install "${Tasmanian_post_install}cmake static target:      Tasmanian::static\n")
endif()
if (TARGET Tasmanian_libsparsegrid_shared)
    set(Tasmanian_post_install "${Tasmanian_post_install}cmake shared target:      Tasmanian::shared\n")
endif()
set(Tasmanian_post_install "${Tasmanian_post_install}cmake alias target:       Tasmanian::Tasmanian\n")
set(Tasmanian_post_install "${Tasmanian_post_install}\n")

if (Tasmanian_ENABLE_PYTHON)
    set(Tasmanian_post_install "${Tasmanian_post_install}python module:      ${Tasmanian_python_install_path}/Tasmanian.py\n")
    set(Tasmanian_post_install "${Tasmanian_post_install}python alternative: ${CMAKE_INSTALL_PREFIX}/share/Tasmanian/python/Tasmanian.py\n")
    set(Tasmanian_post_install "${Tasmanian_post_install}python example:     ${CMAKE_INSTALL_PREFIX}/share/Tasmanian/examples/example_sparse_grids.py\n")
    set(Tasmanian_post_install "${Tasmanian_post_install}                    to import the python module\n\n")
    set(Tasmanian_post_install "${Tasmanian_post_install}                    import sys\n")
    set(Tasmanian_post_install "${Tasmanian_post_install}                    sys.path.append(\\\"${CMAKE_INSTALL_PREFIX}/share/Tasmanian/python\\\")\n")
    set(Tasmanian_post_install "${Tasmanian_post_install}                    import Tasmanian\n\n")
endif()

if (NOT "${Tasmanian_MATLAB_WORK_FOLDER}" STREQUAL "")
    set(Tasmanian_post_install "${Tasmanian_post_install}matlab flles in: ${CMAKE_INSTALL_PREFIX}/share/Tasmanian/matlab/\n")
    set(Tasmanian_post_install "${Tasmanian_post_install}                 NOTE: add ${CMAKE_INSTALL_PREFIX}/share/Tasmanian/matlab/ to the MATLAB path\n\n")
    set(Tasmanian_post_install "${Tasmanian_post_install}                 addpath('${CMAKE_INSTALL_PREFIX}/share/Tasmanian/matlab/')\n")
endif()
set(Tasmanian_post_install "${Tasmanian_post_install}--------------------------------------------------------------------------------\n")

install(CODE "message(\"${Tasmanian_post_install}\")")
install(CODE "file(WRITE ${CMAKE_INSTALL_PREFIX}/share/Tasmanian/Tasmanian.log \"${Tasmanian_post_install}\")")
install(CODE "message(\"information stored in: ${CMAKE_INSTALL_PREFIX}/share/Tasmanian/Tasmanian.log\n\")")
